secret_key config

--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,11 @@ coverage.xml
 
 # Django stuff:
 *.log
+*.pyc
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+secrets.json
 
 # Flask stuff:
 instance/
@@ -127,6 +129,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-config/settings.py
-
