--- a/.gitignore
+++ b/.gitignore
@@ -61,10 +61,10 @@ coverage.xml
 local_settings.py
 # db.sqlite3
 # db.sqlite3-journal
-secrets.json
 
 # Docker stuff:
-# .env.prod
+.env.prod
+.env.dev
 
 # Flask stuff:
 instance/
